# finetunning-distilBERT

./: .gitignore  pyproject.toml
src/: main.py
tests/: test_pos_finetune.py
