[tool.poetry]
name = "distilbert-finetunnig"
version = "0.1.0"
description = ""
authors = ["arthur999999 <arthurhono.contato@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
transformers = "^4.49.0"
datasets = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
